# oh-idk

./: .gitignore  .pylintrc  CLI.md  Makefile  README.md  TODO.md  cli.py  mypy.ini  pyproject.toml  requirements.txt  scalingo.json
.github/: copilot-instructions.md
.github/actions/setup-postgres/: action.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_use_pubkey_as_primary_key.py
app/: __init__.py  auth.py  config.py  crypto.py  main.py  models.py  schemas.py  trust.py
examples/: cli_workflow.sh
tests/: README.md  conftest.py  test_api.py  test_cli.py  test_crypto.py  test_rate_limiting.py  test_security_baseline.py
